--- a/LeonidsExamples/build.gradle
+++ b/LeonidsExamples/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.plattysoft.leonids.examples"
         minSdkVersion 11
-        targetSdkVersion 25
+        targetSdkVersion 32
     }
 
     buildTypes {
@@ -16,10 +15,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    namespace 'com.plattysoft.leonids.examples'
 }
 
 dependencies {
-    compile project(':LeonidsLib')
-//    compile files('libs/LeonidsLib.jar')
-//    compile 'com.plattysoft.leonids:LeonidsLib:1.3.1'
+    implementation project(':LeonidsLib')
 }
