--- a/LeonidsExamples/src/main/AndroidManifest.xml
+++ b/LeonidsExamples/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.plattysoft.leonids.examples"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:versionCode="3"
-    android:versionName="1.2" >
+    android:versionName="1.2">
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -12,17 +12,18 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.plattysoft.leonids.examples.ExampleListActivity"
-            android:label="@string/app_name" >
+            android:exported="true"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
         <activity android:name="com.plattysoft.leonids.examples.OneShotSimpleExampleActivity" />
         <activity android:name="com.plattysoft.leonids.examples.FireworksExampleActivity" />
         <activity android:name="com.plattysoft.leonids.examples.OneShotAdvancedExampleActivity" />
